# grafana-sns-alert-broadcaster

./: .env.example  .gitignore  deploy.sh  lint.sh  omit_deps.sh  pyproject.toml  samconfig.toml  template.yaml  test_local.py
app/: config.yaml  handler.py  requirements.txt  router.py
app/ack_handler/: handler.py
app/channels/: __init__.py  aws_connect.py  base.py  slack.py  telegram.py
app/container/: container.py
app/escalation/: call.py  check_ack.py  escalate.py  start.py
app/oncall/: get_handler.py  rotate_handler.py  service.py
events/: test_event.json
scripts/: seed_oncall.py
statemachine/: escalation.asl.json
tests/: conftest.py  test_handler.py  test_router.py
tests/channels/: test_aws_connect.py  test_base.py  test_slack.py  test_telegram.py
